...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Login" id="BYZ-38-t0r" customClass="LoginViewController" customModule="mobApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <rect key="frame" x="0.0" y="64" width="375" height="403"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNf-S7-u8d">
                                        <rect key="frame" x="67" y="0.0" width="241.5" height="93.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1CD-p9-rgg" userLabel="Patient ID Text Field">
                                                <rect key="frame" x="80" y="35" width="215" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="UoY-oU-t7d"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="elC-1P-bgY">
                                                <rect key="frame" x="80" y="10" width="215" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="u9S-Le-iaQ"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QGS-rC-V7c">
                                                <rect key="frame" x="92" y="-10" width="191" height="74"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                                <state key="normal" backgroundImage="Done"/>
                                                <connections>
...
        <scene sceneID="uzX-PL-WtA">
            <objects>
                <viewController title="My Recording" id="dbg-at-zTc" customClass="RecordingsViewController" customModule="mobApp" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ww7-LB-zoD">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="My Recording" id="qC7-7f-4VA">
                        <barButtonItem key="leftBarButtonItem" title="Logout" id="DMI-ge-PrV">
                            <connections>
                                <segue destination="AGY-oG-o4y" kind="unwind" identifier="unwindSegueToLogin" unwindAction="unwindToThisViewControllerWithSegue:" id="52V-Qm-RlR"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Messages" id="1mj-vO-5hE">
                            <connections>
                                <segue destination="dz3-PZ-Gha" kind="show" identifier="segueToMessages" id="cXH-ap-UCd"/>
...
